--- a/src/containers/Register/Register.css
+++ b/src/containers/Register/Register.css
@@ -1,19 +1,9 @@
-html {
-    width: 100%;
+body {
     background-image: url("RegisterBackground.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
 }
-
-/*#pageRegister {*/
-/*        width: 100%;*/
-/*        height: 100%;*/
-/*        background-image: url("RegisterBackground.jpg");*/
-/*        background-repeat: no-repeat;*/
-/*        background-attachment: fixed;*/
-/*        background-position: center;*/
-/*}*/
 
 #registerForm {
     background-color: rgba(255,255,255,0.6);
